--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
 .wf-loading * {
     opacity: 0;
 }
-</style></head><body>
+</style>
+<title>Automatic Hair Blowing</title>
+<link href="./static/style.css" rel="stylesheet">
+</head>
+<body>
   <div class="github_logo w-embed"><a href="https://github.com/NeverGiveU/AutomaticHairBlowing" class="github-corner" aria-label="View source on Github">
 <svg width="80" height="80" viewBox="0 0 250 250" style="fill:#333333; color:#fff; position: absolute; top: 0; border: 0; right: 0;" aria-hidden="true">
 <defs>
@@ -20,10 +24,11 @@
 
 <div class="section hero nerf-_v2 wf-section">
   <div class="container-2 nerf_header_v2 w-container">
-    <h1 class="nerf_title_v2">Automatic Hair Blowing</h1>
-    <h1 class="nerf_subheader_v2">Automatic Animation of Hair Blowing in Still Portrait Photos</h1>
-    <h1 class="eccv_label">arXiv</h1>
-    <div class="nerf_authors_list_single w-row">
+    <h1 class="nerf_title_v2">Automatic Animation of Hair Blowing in Still Portrait Photos</h1>
+    <br/>
+    <!-- <h1 class="nerf_subheader_v2">Automatic Animation of Hair Blowing in Still Portrait Photos</h1> -->
+    <!-- <h1 class="eccv_label">arXiv</h1> -->
+    <!-- <div class="nerf_authors_list_single w-row">
       <div class="w-col w-col-2"><a href="#" target="_blank" class="nerf_authors_v2"></a></div>
       <div class="w-col w-col-2"><a href="#" target="_blank" class="nerf_authors_v2">Wenpeng Xiao</a></div>
       <div class="w-col w-col-2"><a href="#" target="_blank" class="nerf_authors_v2">Bing Li</a></div>
@@ -37,7 +42,23 @@
       <div class="w-col w-col-2"><h1 class="nerf_affiliation_v2"></h1></div>
       <div class="w-col w-col-2"><h1 class="nerf_affiliation_v2">ByteDance</h1></div>
       <div class="w-col w-col-2"><h1 class="nerf_affiliation_v2">ByteDance</h1></div>
-    </div>
+    </div> -->
+    <p id="authors" class="serif">
+      <a >Wenpeng Xiao<sup>1</sup></a>
+      <a >Wentao Liu<sup>1</sup></a>
+      <a >Yitong Wang<sup>1</sup></a>
+      <a >Bernard Ghanem<sup>2</sup></a>
+      <a >Bing Li<sup>2</sup></a>
+      <br>
+      <span style="font-size: 0.8em; margin-top: 0.5em">
+        <a><sup>1</sup>ByteDance Inc</a>
+        <a><sup>2</sup>King Abdullah University of Science and Tech</a>
+      </span>
+      <br/>
+      <a style="font-size: 0.7em">{xiaowenpeng.com, liuwentao.canno}@bytedance.com, wangyitong@pku.edu.cn, {Bernard.Ghanem, bing.li}@kaust.edu.sa</a>
+    </p>
+    <br/>
+    <br/>
 
     <h2 class="grey-heading_nerf" style="display:table-cell;vertical-align:middle">Overview</h2>
       <table>
