--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <p class="serif" style="color: rgb(181, 181, 181); font-weight: bold">Click to Play the Animations!</p>
   </font>
 
-  <video class="clickplay" width="100%">
+  <video class="clickplay" width="100%" height="auto" muted="" controls="" autoplay="autoplay" loop="loop" preload="metadata">
     <source src="static/assets/teaser-2.mp4" type="video/mp4">
   </video>
 
@@ -95,11 +95,6 @@
     </div>
     <div class="col-gallery">
       <font size="+0">
-        <p class="serif" style="text-align: center; color: rgb(33, 44, 54); font-weight: bold">Ours</p>
-      </font>
-    </div>
-    <div class="col-gallery">
-      <font size="+0">
         <p class="serif" style="text-align: center; color: rgb(33, 44, 54); font-weight: bold">Endlessloops<a href="https://dl.acm.org/doi/pdf/10.1145/3450626.3459935" style="color: #ff0000"> [1]</a></p>
       </font>
     </div>
@@ -113,16 +108,16 @@
         <p class="serif" style="text-align: center; color: rgb(33, 44, 54); font-weight: bold">WindEffects<a href="https://grail.cs.washington.edu/projects/StochasticMotionTextures/" style="color: #ff0000"> [3]</a></p>
       </font>
     </div>
+    <div class="col-gallery">
+      <font size="+0">
+        <p class="serif" style="text-align: center; color: rgb(33, 44, 54); font-weight: bold">Ours</p>
+      </font>
+    </div>
   </div>
 
   <div class="row">
     <div class="col-gallery">
       <img class="summary-img" src="./static/assets/inputs/07-test-20220704.png" style="width:100%;"> <br>
-    </div>
-    <div class="col-gallery">
-      <video class="clickplay" width="100%">
-        <source src="./static/assets/1s_mp4/07-test-20220704_1.mp4v" type="video/mp4">
-      </video>
     </div>
     <div class="col-gallery">
       <video class="clickplay" width="100%">
@@ -139,16 +134,16 @@
         <source src="./static/assets/4s_mp4/07-test-20220704_4.mp4v" type="video/mp4">
       </video>
     </div>
+    <div class="col-gallery">
+      <video class="clickplay" width="100%">
+        <source src="./static/assets/1s_mp4/07-test-20220704_1.mp4v" type="video/mp4">
+      </video>
+    </div>
   </div>
 
   <div class="row">
     <div class="col-gallery">
       <img class="summary-img" src="./static/assets/inputs/02-test-20220704.png" style="width:100%;"> <br>
-    </div>
-    <div class="col-gallery">
-      <video class="clickplay" width="100%">
-        <source src="./static/assets/1s_mp4/02-test-20220704_1.mp4v" type="video/mp4">
-      </video>
     </div>
     <div class="col-gallery">
       <video class="clickplay" width="100%">
@@ -165,16 +160,16 @@
         <source src="./static/assets/4s_mp4/02-test-20220704_4.mp4v" type="video/mp4">
       </video>
     </div>
+    <div class="col-gallery">
+      <video class="clickplay" width="100%">
+        <source src="./static/assets/1s_mp4/02-test-20220704_1.mp4v" type="video/mp4">
+      </video>
+    </div>
   </div>
 
   <div class="row">
     <div class="col-gallery">
       <img class="summary-img" src="./static/assets/inputs/R2_1238.png" style="width:100%;"> <br>
-    </div>
-    <div class="col-gallery">
-      <video class="clickplay" width="100%">
-        <source src="./static/assets/1s_mp4/R2_1238_1.mp4v" type="video/mp4">
-      </video>
     </div>
     <div class="col-gallery">
       <video class="clickplay" width="100%">
@@ -191,16 +186,16 @@
         <source src="./static/assets/4s_mp4/R2_1238_4.mp4v" type="video/mp4">
       </video>
     </div>
+    <div class="col-gallery">
+      <video class="clickplay" width="100%">
+        <source src="./static/assets/1s_mp4/R2_1238_1.mp4v" type="video/mp4">
+      </video>
+    </div>
   </div>
 
   <div class="row">
     <div class="col-gallery">
       <img class="summary-img" src="./static/assets/inputs/R2_1166.png" style="width:100%;"> <br>
-    </div>
-    <div class="col-gallery">
-      <video class="clickplay" width="100%">
-        <source src="./static/assets/1s_mp4/R2_1166_1.mp4v" type="video/mp4">
-      </video>
     </div>
     <div class="col-gallery">
       <video class="clickplay" width="100%">
@@ -215,6 +210,11 @@
     <div class="col-gallery">
       <video class="clickplay" width="100%">
         <source src="./static/assets/4s_mp4/R2_1166_4.mp4v" type="video/mp4">
+      </video>
+    </div>
+    <div class="col-gallery">
+      <video class="clickplay" width="100%">
+        <source src="./static/assets/1s_mp4/R2_1166_1.mp4v" type="video/mp4">
       </video>
     </div>
   </div>
@@ -232,11 +232,6 @@
     </div>
     <div class="col-gallery">
       <font size="+0">
-        <p class="serif" style="text-align: center; color: rgb(33, 44, 54); font-weight: bold">Ours</p>
-      </font>
-    </div>
-    <div class="col-gallery">
-      <font size="+0">
         <p class="serif" style="text-align: center; color: rgb(33, 44, 54); font-weight: bold">DMVFN<a href="https://openaccess.thecvf.com/content/CVPR2023/papers/Hu_A_Dynamic_Multi-Scale_Voxel_Flow_Network_for_Video_Prediction_CVPR_2023_paper.pdf" style="color: #ff0000"> [4]</a></p>
       </font>
     </div>
@@ -250,16 +245,16 @@
         <p class="serif" style="text-align: center; color: rgb(33, 44, 54); font-weight: bold">LFDM<a href="http://openaccess.thecvf.com/content/CVPR2023/papers/Ni_Conditional_Image-to-Video_Generation_With_Latent_Flow_Diffusion_Models_CVPR_2023_paper.pdf" style="color: #ff0000"> [6]</a></p>
       </font>
     </div>
+    <div class="col-gallery">
+      <font size="+0">
+        <p class="serif" style="text-align: center; color: rgb(33, 44, 54); font-weight: bold">Ours</p>
+      </font>
+    </div>
   </div>
 
   <div class="row">
     <div class="col-gallery">
       <img class="summary-img" src="./static/assets/inputs/R2_1644.png" style="width:100%;"> <br>
-    </div>
-    <div class="col-gallery">
-      <video class="clickplay" width="100%">
-        <source src="./static/assets/R2_1644-ours.mp4" type="video/mp4">
-      </video>
     </div>
     <div class="col-gallery">
       <video class="clickplay" width="100%">
@@ -276,6 +271,11 @@
         <source src="./static/assets/R2_1644-LFDM.mp4" type="video/mp4">
       </video>
     </div>
+    <div class="col-gallery">
+      <video class="clickplay" width="100%">
+        <source src="./static/assets/R2_1644-ours.mp4" type="video/mp4">
+      </video>
+    </div>
   </div>
 
   <p style="font-size: 1.2em" class="serif">
@@ -290,17 +290,17 @@
     </div>
     <div class="col-gallery" style="width: 25%;">
       <font size="+0">
-        <p class="serif" style="text-align: center; color: rgb(33, 44, 54); font-weight: bold">Ours</p>
-      </font>
-    </div>
-    <div class="col-gallery" style="width: 25%;">
-      <font size="+0">
         <p class="serif" style="text-align: center; color: rgb(33, 44, 54); font-weight: bold">SI2V w cINNs<a href="http://openaccess.thecvf.com/content/CVPR2021/papers/Dorkenwald_Stochastic_Image-to-Video_Synthesis_Using_cINNs_CVPR_2021_paper.pdf" style="color: #ff0000"> [7]</a></p>
       </font>
     </div>
     <div class="col-gallery" style="width: 25%;">
       <font size="+0">
         <p class="serif" style="text-align: center; color: rgb(33, 44, 54); font-weight: bold">ipoke<a href="https://openaccess.thecvf.com/content/ICCV2021/papers/Blattmann_iPOKE_Poking_a_Still_Image_for_Controlled_Stochastic_Video_Synthesis_ICCV_2021_paper.pdf" style="color: #ff0000"> [8]</a></p>
+      </font>
+    </div>
+    <div class="col-gallery" style="width: 25%;">
+      <font size="+0">
+        <p class="serif" style="text-align: center; color: rgb(33, 44, 54); font-weight: bold">Ours</p>
       </font>
     </div>
   </div>
@@ -311,17 +311,17 @@
     </div>
     <div class="col-gallery" style="width: 25%;">
       <video class="clickplay" width="100%">
-        <source src="./static/assets/CM_1213-ours.mp4" type="video/mp4">
-      </video>
-    </div>
-    <div class="col-gallery" style="width: 25%;">
-      <video class="clickplay" width="100%">
         <source src="./static/assets/CM_1213-cINNs_1.mp4" type="video/mp4">
       </video>
     </div>
     <div class="col-gallery" style="width: 25%;">
       <video class="clickplay" width="100%">
-        <source src="./static/assets/CM_1213-ipoke_1.mp4" type="video/mp4">
+        <source src="./static/assets/CM_1213-ipoke_2.mp4" type="video/mp4">
+      </video>
+    </div>
+    <div class="col-gallery" style="width: 25%;">
+      <video class="clickplay" width="100%">
+        <source src="./static/assets/CM_1213-ours.mp4" type="video/mp4">
       </video>
     </div>
   </div>
@@ -332,17 +332,17 @@
     </div>
     <div class="col-gallery" style="width: 25%;">
       <video class="clickplay" width="100%">
-        <source src="./static/assets/1s_mp4/R2_1336_1.mp4v" type="video/mp4">
-      </video>
-    </div>
-    <div class="col-gallery" style="width: 25%;">
-      <video class="clickplay" width="100%">
         <source src="./static/assets/R2_1336-cINNs.mp4" type="video/mp4">
       </video>
     </div>
     <div class="col-gallery" style="width: 25%;">
       <video class="clickplay" width="100%">
-        <source src="./static/assets/R2_1336-ipoke_1.mp4" type="video/mp4">
+        <source src="./static/assets/R2_1336-ipoke_2.mp4" type="video/mp4">
+      </video>
+    </div>
+    <div class="col-gallery" style="width: 25%;">
+      <video class="clickplay" width="100%">
+        <source src="./static/assets/1s_mp4/R2_1336_1.mp4v" type="video/mp4">
       </video>
     </div>
   </div>
@@ -517,149 +517,6 @@
   </div>
 
 </div>
-
-<div class="content">
-  <p style="text-align:left; font-size: 2em; font-weight: bold" class="serif">Gallery</p>
-  
-  <table style="width: 100%">
-    <tr>
-      <td style="width: 20%">
-        <video class="clickplay" width="100%" height="100%" muted="" controls="" autoplay="autoplay" loop="loop" preload="metadata">
-          <source src="./static/assets/1s_mp4/CM_1033_1.mp4v" type="video/mp4">
-        </video>
-      </td>
-      <td style="width: 20%">
-        <video class="clickplay" width="100%" height="100%" muted="" controls="" autoplay="autoplay" loop="loop" preload="metadata">
-          <source src="./static/assets/1s_mp4/CM_1034_1.mp4v" type="video/mp4">
-        </video>
-      </td>
-      <td style="width: 20%">
-        <video class="clickplay" width="100%" height="100%" muted="" controls="" autoplay="autoplay" loop="loop" preload="metadata">
-          <source src="./static/assets/1s_mp4/CM_1057_1.mp4v" type="video/mp4">
-        </video>
-      </td>
-      <td style="width: 20%">
-        <video class="clickplay" width="100%" height="100%" muted="" controls="" autoplay="autoplay" loop="loop" preload="metadata">
-          <source src="./static/assets/1s_mp4/CM_1065_1.mp4v" type="video/mp4">
-        </video>
-      </td>
-      <td style="width: 20%">
-        <video class="clickplay" width="100%" height="100%" muted="" controls="" autoplay="autoplay" loop="loop" preload="metadata">
-          <source src="./static/assets/1s_mp4/CM_1068_1.mp4v" type="video/mp4">
-        </video>
-      </td>
-    </tr>
-    <tr>
-      <td style="width: 20%">
-        <video class="clickplay" width="100%" height="100%" muted="" controls="" autoplay="autoplay" loop="loop" preload="metadata">
-          <source src="./static/assets/1s_mp4/R2_1144_1.mp4v" type="video/mp4">
-        </video>
-      </td>
-      <td style="width: 20%">
-        <video class="clickplay" width="100%" height="100%" muted="" controls="" autoplay="autoplay" loop="loop" preload="metadata">
-          <source src="./static/assets/1s_mp4/R2_1156_1.mp4v" type="video/mp4">
-        </video>
-      </td>
-      <td style="width: 20%">
-        <video class="clickplay" width="100%" height="100%" muted="" controls="" autoplay="autoplay" loop="loop" preload="metadata">
-          <source src="./static/assets/1s_mp4/R2_1286_1.mp4v" type="video/mp4">
-        </video>
-      </td>
-      <td style="width: 20%">
-        <video class="clickplay" width="100%" height="100%" muted="" controls="" autoplay="autoplay" loop="loop" preload="metadata">
-          <source src="./static/assets/1s_mp4/R2_1297_1.mp4v" type="video/mp4">
-        </video>
-      </td>
-      <td style="width: 20%">
-        <video class="clickplay" width="100%" height="100%" muted="" controls="" autoplay="autoplay" loop="loop" preload="metadata">
-          <source src="./static/assets/1s_mp4/R2_1336_1.mp4v" type="video/mp4">
-        </video>
-      </td>
-    </tr>
-    <tr>
-      <td style="width: 20%">
-        <video class="clickplay" width="100%" height="100%" muted="" controls="" autoplay="autoplay" loop="loop" preload="metadata">
-          <source src="./static/assets/1s_mp4/R2_1486_1.mp4v" type="video/mp4">
-        </video>
-      </td>
-      <td style="width: 20%">
-        <video class="clickplay" width="100%" height="100%" muted="" controls="" autoplay="autoplay" loop="loop" preload="metadata">
-          <source src="./static/assets/1s_mp4/R2_1522_1.mp4v" type="video/mp4">
-        </video>
-      </td>
-      <td style="width: 20%">
-        <video class="clickplay" width="100%" height="100%" muted="" controls="" autoplay="autoplay" loop="loop" preload="metadata">
-          <source src="./static/assets/1s_mp4/R2_1538_1.mp4v" type="video/mp4">
-        </video>
-      </td>
-      <td style="width: 20%">
-        <video class="clickplay" width="100%" height="100%" muted="" controls="" autoplay="autoplay" loop="loop" preload="metadata">
-          <source src="./static/assets/1s_mp4/R2_1599_1.mp4v" type="video/mp4">
-        </video>
-      </td>
-      <td style="width: 20%">
-        <video class="clickplay" width="100%" height="100%" muted="" controls="" autoplay="autoplay" loop="loop" preload="metadata">
-          <source src="./static/assets/1s_mp4/R2_1611_1.mp4v" type="video/mp4">
-        </video>
-      </td>
-    </tr>
-    <tr>
-      <td style="width: 20%">
-        <video class="clickplay" width="100%" height="100%" muted="" controls="" autoplay="autoplay" loop="loop" preload="metadata">
-          <source src="./static/assets/1s_mp4/R2_1612_1.mp4v" type="video/mp4">
-        </video>
-      </td>
-      <td style="width: 20%">
-        <video class="clickplay" width="100%" height="100%" muted="" controls="" autoplay="autoplay" loop="loop" preload="metadata">
-          <source src="./static/assets/1s_mp4/R2_1635_1.mp4v" type="video/mp4">
-        </video>
-      </td>
-      <td style="width: 20%">
-        <video class="clickplay" width="100%" height="100%" muted="" controls="" autoplay="autoplay" loop="loop" preload="metadata">
-          <source src="./static/assets/1s_mp4/R2_1644_1.mp4v" type="video/mp4">
-        </video>
-      </td>
-      <td style="width: 20%">
-        <video class="clickplay" width="100%" height="100%" muted="" controls="" autoplay="autoplay" loop="loop" preload="metadata">
-          <source src="./static/assets/1s_mp4/R2_1856_1.mp4v" type="video/mp4">
-        </video>
-      </td>
-      <td style="width: 20%">
-        <video class="clickplay" width="100%" height="100%" muted="" controls="" autoplay="autoplay" loop="loop" preload="metadata">
-          <source src="./static/assets/1s_mp4/R2_1862_1.mp4v" type="video/mp4">
-        </video>
-      </td>
-    </tr>
-    <tr>
-      <td style="width: 20%">
-        <video class="clickplay" width="100%" height="100%" muted="" controls="" autoplay="autoplay" loop="loop" preload="metadata">
-          <source src="./static/assets/1s_mp4/wavy_737_1.mp4v" type="video/mp4">
-        </video>
-      </td>
-      <td style="width: 20%">
-        <video class="clickplay" width="100%" height="100%" muted="" controls="" autoplay="autoplay" loop="loop" preload="metadata">
-          <source src="./static/assets/1s_mp4/wavy_761_1.mp4v" type="video/mp4">
-        </video>
-      </td>
-      <td style="width: 20%">
-        <video width="72%" height="72%" muted="" controls="" autoplay="autoplay" loop="loop" preload="metadata">
-          <source src="./static/assets/1s_mp4/04-test-20220704_1.mp4v" type="video/mp4">
-        </video>
-      </td>
-      <td style="width: 20%">
-        <video width="69%" height="69%" muted="" controls="" autoplay="autoplay" loop="loop" preload="metadata">
-          <source src="./static/assets/1s_mp4/03-test-20220704_1.mp4v" type="video/mp4">
-        </video>
-      </td>
-      <td style="width: 20%">
-        <video class="clickplay" width="100%" height="100%" muted="" controls="" autoplay="autoplay" loop="loop" preload="metadata">
-          <source src="./static/assets/1s_mp4/R2_1487_1.mp4v" type="video/mp4">
-        </video>
-      </td>
-    </tr>
-</table>
-</div>
-
 
 
 <!-- <div class="content" id="bibtex">
