--- a/index.html
+++ b/index.html
@@ -519,18 +519,17 @@
 </div>
 
 
-<!-- <div class="content" id="bibtex">
-  <p style="text-align:left; font-size: 2em; font-weight: bold" class="serif">BibTeX</p>
-  <code> @misc{guo2023animatediff,<br>
-  &nbsp;&nbsp;title={AnimateDiff: Animate Your Personalized Text-to-Image Diffusion Models without Specific Tuning},<br>
-  &nbsp;&nbsp;author={Yuwei Guo, Ceyuan Yang, Anyi Rao, Yaohui Wang, Yu Qiao, Dahua Lin, Bo Dai},<br>
-  &nbsp;&nbsp;booktitle={arXiv preprint arxiv:2307.04725},<br>
-  &nbsp;&nbsp;year={2023},<br>
-  &nbsp;&nbsp;archivePrefix={arXiv},<br>
-  &nbsp;&nbsp;primaryClass={cs.CV}<br>
-  } </code> 
-</div> -->
-
+<div class="content" id="bibtex">
+  <p style="text-align:left; font-size: 2em; font-weight: bold" class="serif">BibTeX</p> 
+  <code>
+    @inproceedings{hairAni,<br/>
+    &nbsp;&nbsp;title={Automatic Animation of Hair Blowing in Still Portrait Photos},<br/>
+    &nbsp;&nbsp;author={Wenpeng Xiao and Wentao Liu and Yitong Wang and Bernard Ghanem and Bing Li},<br/>
+    &nbsp;&nbsp;booktitle={ICCV},<br/>
+    &nbsp;&nbsp;year={2023}<br/>
+    }
+  </code>
+</div>
 
 
 <div class="content">
