--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@
   </p>
 
   <video class="clickplay" width="100%">
-    <source src="./static/assets-mosaic/Fig3-mosaic.mp4v" type="video/mp4">
+    <source src="./static/assets-mosaic/Fig. 3.mp4" type="video/mp4">
   </video>
   
 </div>
@@ -505,10 +505,10 @@
   <div class="row">
     <div class="row">
       <div class="col-gallery" style="width: 37.45%;">
-        <img style="width:100%" src="./static/assets/cloth.gif">
+        <img style="width:100%" src="./static/assets-mosaic/cloth.gif">
       </div>
       <div class="col-gallery" style="width: 37.45%;">
-        <img style="width:100%" src="./static/assets/anime.gif">
+        <img style="width:100%" src="./static/assets-mosaic/anime.gif">
       </div>
       <div class="col-gallery" style="width: 25.10%;">
         <!-- <img style="width:100%" src="./static/assets-mosaic/flowing-mosaic.mp4v"> -->
